Modificaciones para que funcione en el JDK 1.8